--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -6,6 +6,37 @@
 
 <div class="container">
     <br>
+
+    {% if status == '0' %}
+      <div class="alert alert-success" role="alert">
+        Cadastro realizado com sucesso!
+      </div>
+    {% endif %}
+
+    {% if status == '1' %}
+      <div class="alert alert-danger" role="alert">
+        Campos nome e email não podem estar vazios!
+      </div>
+    {% endif %}
+
+    {% if status == '2' %}
+      <div class="alert alert-danger" role="alert">
+        A senha deve conter no mínimo 8 caracteres!
+      </div>
+    {% endif %}
+
+    {% if status == '3' %}
+      <div class="alert alert-danger" role="alert">
+        Usuário já esxiste no sistema!!
+      </div>
+    {% endif %}
+
+    {% if status == '4' %}
+      <div class="alert alert-danger" role="alert">
+        Erro interno do sistema!
+      </div>
+    {% endif %}
+
     <div class="row">
     
         <div class="col-md-3">
