Adicionado tela de login

--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -61,8 +61,8 @@
                     <label for="senha">Senha</label>
                     <input name="senha" type="password" class="form-control" id="senha" placeholder="Senha...">
                 </div>
-                <button type="submit" class="btn btn-secondary">Enviar</button>
-                <input class="btn btn-secondary" type="submit" value="Enviar2">
+                <button type="submit" class="btn btn-secondary">Cadastrar</button>
+                <a href="{% url 'login' %}" class="btn btn-primary active" role="button" aria-pressed="true">Login</a>
             </form>
 
         </div>
