--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -6,21 +6,29 @@
 
 <div class="container">
     <br>
+    {% if status == '1' %}
+    <div class="alert alert-danger" role="alert">
+        Email ou senha inválidos
+      </div>
+      
+    {% endif %}
 
+    {% if status == '2' %}
+    <div class="alert alert-danger" role="alert">
+        Faça login antes de tentar acessar o sistema
+      </div>
+      
+    {% endif %}
     <div class="row">
-    
+
         <div class="col-md-3">
-            
+
         </div>
 
-        <div class="col-md-3">
-            <hr>
-
-            {% if status == '1' %}
-                <div class="alert alert-danger" role="alert">
-                    Email ou Senha inválidos!
-                </div>
-            {% endif %}
+        <div class="col-md">
+           
+           <hr>
+           <br>
             
             <form method="POST" action="{% url 'validar_login' %}">{% csrf_token %}
                 <div class="form-group">
@@ -38,11 +46,13 @@
         </div>
 
         <div class="col-md-3">
-            
+
         </div>
-        
+
+
     </div>
 
 </div>
 
-{% endblock 'conteudo' %}
+
+{% endblock %}
