Adicionado redirecionamento para pagina descricao_livro.html

--- a/livro/templates/home.html
+++ b/livro/templates/home.html
@@ -22,7 +22,7 @@
                         </svg>
                     {% endif %}
                     <br><br>
-                    <button type="button" class="btn btn-secondary btn-sm">Acessar</button>
+                    <a href="{% url 'descricao_livro' livro.id %}" class="btn btn-secondary btn-sm" role="button" aria-pressed="true">Acessar</a>
                 </div>
               </div>
         </div>
