Adicionado link template base para página home

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <body>
 
   <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0 h1">Navbar</span>
+    <a class="navbar-brand mb-0 h1" href="{% url 'home' %}">Biblioteca</a>
   </nav>
 
     {% block 'conteudo' %}{% endblock 'conteudo' %}
