--- a/templates/base.html
+++ b/templates/base.html
@@ -8,17 +8,20 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     {% block 'head' %}{% endblock 'head' %}
+
     <title>{% block 'titulo' %}{% endblock 'titulo' %}</title>
+
   </head>
   <body>
-
+  <!-- navbar -->
   <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand mb-0 h1" href="{% url 'home' %}">Biblioteca</a>
 
     {% if usuario_logado %}
     <form class="form-inline">
-
-      <a class="btn btn-sm btn-outline-success mr-sm-2" type="button" data-toggle="modal" data-target="#exampleModal" data-whatever="@fat">Cadastrar livro</a>
+      <!-- Button trigger modal Cadastrar livro-->
+      <a href="{% url 'cadastrar_livro' %}" class="btn btn-sm btn-outline-success mr-sm-2" type="button">Cadastrar livro</a>
+      <!-- Button trigger sair -->
       <a href="{% url 'sair' %}" class="btn btn-sm btn-outline-secondary" type="button">Sair</a>
     </form>
     {% endif %}
@@ -29,11 +32,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"</script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"</script>
-
-    <!-- Modal cadastrar livro -->
-    {% if usuario_logado %}
-    
-    {% endif %}
 
   </body>
 </html>
