Alterado tipo de botões cadastrar, excluir e editar

--- a/livro/templates/cadastrar_livro.html
+++ b/livro/templates/cadastrar_livro.html
@@ -14,7 +14,7 @@
                 <div class="form-group">
                 {{ formCadastroLivro|bootstrap }}
                 </div>
-                <button type="submit" class="btn btn-primary">Cadastrar</button>
+                <button type="submit" class="btn btn-outline-success mr-sm-2">Cadastrar</button>
             </form>
     </div>
 </div>
