--- a/livro/templates/descricao_livro.html
+++ b/livro/templates/descricao_livro.html
@@ -47,7 +47,9 @@
                             <input type="checkbox" name="emprestado">
                         {% endif %}
                     <br><br>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-outline-success mr-sm-2">Alterar</button>
+                    <a class="btn btn-outline-danger mr-sm-2" href="#" role="button">Excluir</a>
+
                 </div>
             </form>
             <hr>
