--- a/templates/base.html
+++ b/templates/base.html
@@ -7,31 +7,32 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    
     {% block 'head' %}{% endblock 'head' %}
 
     <title>{% block 'titulo' %}{% endblock 'titulo' %}</title>
 
   </head>
   <body>
-  <!-- navbar -->
-  <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand mb-0 h1" href="{% url 'home' %}">Biblioteca</a>
-
-    {% if usuario_logado %}
-    <form class="form-inline">
-      <!-- Button trigger modal Cadastrar livro-->
-      <a href="{% url 'cadastrar_livro' %}" class="btn btn-sm btn-outline-success mr-sm-2" type="button">Cadastrar livro</a>
-      <!-- Button trigger sair -->
-      <a href="{% url 'sair' %}" class="btn btn-sm btn-outline-secondary" type="button">Sair</a>
-    </form>
-    {% endif %}
-
-  </nav>
+    
+    <!-- navbar -->
+    <nav class="navbar navbar-dark bg-dark">
+      <a class="navbar-brand mb-0 h1" href="{% url 'home' %}">Biblioteca</a>
+      {% if usuario_logado %}
+      <form class="form-inline">
+        <!-- Button trigger modal Cadastrar livro-->
+        <a href="{% url 'cadastrar_livro' %}" class="btn btn-sm btn-outline-success mr-sm-2" type="button">Cadastrar livro</a>
+        <!-- Button trigger sair -->
+        <a href="{% url 'sair' %}" class="btn btn-sm btn-outline-secondary" type="button">Sair</a>
+      </form>
+      {% endif %}
+    </nav>
 
     {% block 'conteudo' %}{% endblock 'conteudo' %}
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"</script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"</script>
+    <!-- Bootstrap JS and Bundle-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
   </body>
 </html>
