Adicionado função excluir livro em view livro

--- a/livro/templates/descricao_livro.html
+++ b/livro/templates/descricao_livro.html
@@ -48,7 +48,7 @@
                         {% endif %}
                     <br><br>
                     <button type="submit" class="btn btn-outline-success mr-sm-2">Alterar</button>
-                    <a class="btn btn-outline-danger mr-sm-2" href="#" role="button">Excluir</a>
+                    <a href="{% url 'excluir_livro' id_livro %}" class="btn btn-outline-danger mr-sm-2" href="#" role="button">Excluir</a>
 
                 </div>
             </form>
