Adicionado menssagem de sucesso na página home ao cadastrar nova categoria

--- a/livro/templates/cadastrar_categoria.html
+++ b/livro/templates/cadastrar_categoria.html
@@ -10,7 +10,7 @@
         <br>
         <h1>Cadastro de Categoria</h1>
         <hr>
-            <form action="{% url 'home' %}" method="POST"> {% csrf_token %}
+            <form action="#" method="POST"> {% csrf_token %}
                 <div class="form-group">
                 {{ formCadastroCategoria|bootstrap }}
                 </div>
