--- a/livro/templates/home.html
+++ b/livro/templates/home.html
@@ -5,6 +5,14 @@
 {% block 'conteudo' %} 
 
 <div class="container">
+
+    <br>
+    {% if status_categoria == '1' %}
+      <div class="alert alert-success" role="alert">
+        Categoria cadastrada com sucesso!
+      </div>
+    {% endif %}
+
     <div class="row">
         {% for livro in  livros %}
         <div class="col-md">
