Adicionado menssagem de erro na página home ao cadastrar nova categoria

--- a/livro/templates/home.html
+++ b/livro/templates/home.html
@@ -11,7 +11,7 @@
       <div class="alert alert-success" role="alert">
         Categoria cadastrada com sucesso!
       </div>
-    {% elif %}
+    {% else %}
       <div class="alert alert-danger" role="alert">
         Erro ao cadatrar Categoria!
       </div>
