--- a/templates/base.html
+++ b/templates/base.html
@@ -41,21 +41,18 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Cadastrar Emprestimo de Livro</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
+            <h5 class="modal-title" id="emprestimoModalLabel">Cadastrar Emprestimo de Livro</h5>
           </div>
           <div class="modal-body">
-            <form>
+            <form action="{% url 'cadastrar_emprestimo' %}" method="POST">{% csrf_token %}
               <div class="form-group">
                 {{ formCadastroEmprestimo|bootstrap }}
               </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Sair</button>
+                <button type="submit" class="btn btn-outline-primary">Salvar</button>
+              </div>
             </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Sair</button>
-            <button type="button" class="btn btn-outline-primary">Salvar</button>
           </div>
         </div>
       </div>
